--- a/core/resources/src/main/res/values-de/strings.xml
+++ b/core/resources/src/main/res/values-de/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="size">Größe %1$s</string>
     <string name="height">Höhe %1$s</string>
     <string name="quality">Qualität</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normal</string>
     <string name="slow">Langsam</string>
     <string name="very_slow">Sehr langsam</string>
+    <string name="compute_percents">Berechnen Sie Prozente</string>
+    <string name="minimum_value_is">Der Mindestwert ist %1$s</string>
+    <string name="warp_sub">Verzerren Sie das Bild, indem Sie mit den Fingern zeichnen</string>
+    <string name="warp">Kette</string>
+    <string name="hardness">Härte</string>
+    <string name="warp_mode">Warp-Modus</string>
+    <string name="warp_mode_move">Bewegen</string>
+    <string name="warp_mode_grow">Wachsen</string>
+    <string name="warp_mode_shrink">Schrumpfen</string>
+    <string name="warp_mode_swirl_cw">Wirbel im Uhrzeigersinn</string>
+    <string name="warp_mode_swirl_ccw">Gegen den Uhrzeigersinn wirbeln</string>
+    <string name="fade_strength">Stärke verblassen</string>
+    <string name="top_drop">Top-Drop</string>
+    <string name="bottom_drop">Bottom Drop</string>
+    <string name="start_drop">Starten Sie Drop</string>
+    <string name="end_drop">End Drop</string>
 </resources>
