--- a/core/resources/src/main/res/values-ar/strings.xml
+++ b/core/resources/src/main/res/values-ar/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="language">اللغة</string>
     <string name="amoled_mode">وضع Amoled</string>
     <string name="amoled_mode_sub">إذا تم تمكين لون الأسطح فسيتم ضبطه على الظلام المطلق في الوضع الليلي</string>
@@ -2026,4 +2028,18 @@
     <string name="very_slow">بطيء جدًا</string>
     <string name="compute_percents">احسب النسب المئوية</string>
     <string name="minimum_value_is">القيمة الأدنى هي %1$s</string>
+    <string name="warp_sub">تشويه الصورة عن طريق الرسم بالأصابع</string>
+    <string name="warp">الاعوجاج</string>
+    <string name="hardness">صلابة</string>
+    <string name="warp_mode">وضع الاعوجاج</string>
+    <string name="warp_mode_move">يتحرك</string>
+    <string name="warp_mode_grow">ينمو</string>
+    <string name="warp_mode_shrink">يتقلص</string>
+    <string name="warp_mode_swirl_cw">دوامة الأسلحة الكيميائية</string>
+    <string name="warp_mode_swirl_ccw">دوامة CCW</string>
+    <string name="fade_strength">تتلاشى القوة</string>
+    <string name="top_drop">أعلى قطرة</string>
+    <string name="bottom_drop">إسقاط القاع</string>
+    <string name="start_drop">ابدأ بالاسقاط</string>
+    <string name="end_drop">نهاية السقوط</string>
 </resources>
