--- a/core/resources/src/main/res/values-cs/strings.xml
+++ b/core/resources/src/main/res/values-cs/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="prefix">Předpona</string>
     <string name="smth_went_wrong">Něco se pokazilo: %1$s</string>
     <string name="size">Velikost %1$s</string>
@@ -2022,4 +2024,20 @@
     <string name="normal">Normální</string>
     <string name="slow">Pomalý</string>
     <string name="very_slow">Velmi pomalé</string>
+    <string name="compute_percents">Vypočítat procenta</string>
+    <string name="minimum_value_is">Minimální hodnota je %1$s</string>
+    <string name="warp_sub">Zkreslení obrazu kresbou prsty</string>
+    <string name="warp">Warp</string>
+    <string name="hardness">Tvrdost</string>
+    <string name="warp_mode">Režim Warp</string>
+    <string name="warp_mode_move">Pohyb</string>
+    <string name="warp_mode_grow">Růst</string>
+    <string name="warp_mode_shrink">Zmenšit</string>
+    <string name="warp_mode_swirl_cw">Swirl CW</string>
+    <string name="warp_mode_swirl_ccw">Krouživým pohybem CCW</string>
+    <string name="fade_strength">Síla blednutí</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Dolní Drop</string>
+    <string name="start_drop">Spusťte aplikaci Drop</string>
+    <string name="end_drop">End Drop</string>
 </resources>
