--- a/core/resources/src/main/res/values-da/strings.xml
+++ b/core/resources/src/main/res/values-da/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="flexible">Fleksibel</string>
     <string name="ok">OK</string>
     <string name="crop">Beskær</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normal</string>
     <string name="slow">Langsom</string>
     <string name="very_slow">Meget langsom</string>
+    <string name="compute_percents">Beregn procenter</string>
+    <string name="minimum_value_is">Min. værdi er %1$s</string>
+    <string name="warp_sub">Forvrænget billedet ved at tegne med fingrene</string>
+    <string name="warp">Warp</string>
+    <string name="hardness">Hårdhed</string>
+    <string name="warp_mode">Warp-tilstand</string>
+    <string name="warp_mode_move">Flytte</string>
+    <string name="warp_mode_grow">Dyrke</string>
+    <string name="warp_mode_shrink">Krympe</string>
+    <string name="warp_mode_swirl_cw">Swirl CW</string>
+    <string name="warp_mode_swirl_ccw">Hvirvel mod venstre</string>
+    <string name="fade_strength">Fade Styrke</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Nederste fald</string>
+    <string name="start_drop">Start Drop</string>
+    <string name="end_drop">Slut Drop</string>
 </resources>
