--- a/core/resources/src/main/res/values-eu/strings.xml
+++ b/core/resources/src/main/res/values-eu/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="size">Tamaina %1$s</string>
     <string name="smth_went_wrong">Zerbait gaizki atera da: %1$s</string>
     <string name="loading">Kargatzen…</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normala</string>
     <string name="slow">Astiro</string>
     <string name="very_slow">Oso motela</string>
+    <string name="compute_percents">Ehuneko kalkulatu</string>
+    <string name="minimum_value_is">Gutxieneko balioa %1$s da</string>
+    <string name="warp_sub">Desitxuratu irudia hatzekin marraztuz</string>
+    <string name="warp">Warp</string>
+    <string name="hardness">Gogortasuna</string>
+    <string name="warp_mode">Warp modua</string>
+    <string name="warp_mode_move">Mugitu</string>
+    <string name="warp_mode_grow">Hazi</string>
+    <string name="warp_mode_shrink">Txikitu</string>
+    <string name="warp_mode_swirl_cw">Swirl CW</string>
+    <string name="warp_mode_swirl_ccw">Zurrunbiloa CCW</string>
+    <string name="fade_strength">Desagertzeko indarra</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Beheko Tanta</string>
+    <string name="start_drop">Hasi Drop</string>
+    <string name="end_drop">Amaitu Drop</string>
 </resources>
