--- a/core/resources/src/main/res/values-fi/strings.xml
+++ b/core/resources/src/main/res/values-fi/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="width">Leveys %1$s</string>
     <string name="height">Korkeus %1$s</string>
     <string name="quality">Laatu</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normaali</string>
     <string name="slow">Hidas</string>
     <string name="very_slow">Erittäin hidas</string>
+    <string name="compute_percents">Laske prosentit</string>
+    <string name="minimum_value_is">Minimiarvo on %1$s</string>
+    <string name="warp_sub">Vääristä kuvaa piirtämällä sormilla</string>
+    <string name="warp">Loimi</string>
+    <string name="hardness">Kovuus</string>
+    <string name="warp_mode">Warp-tila</string>
+    <string name="warp_mode_move">Liikkua</string>
+    <string name="warp_mode_grow">Kasvaa</string>
+    <string name="warp_mode_shrink">Kutistua</string>
+    <string name="warp_mode_swirl_cw">Pyöritä CW</string>
+    <string name="warp_mode_swirl_ccw">Pyöritä CCW</string>
+    <string name="fade_strength">Häivytysvoima</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Pohjapudotus</string>
+    <string name="start_drop">Käynnistä pudotus</string>
+    <string name="end_drop">Lopeta pudotus</string>
 </resources>
