--- a/core/resources/src/main/res/values-fil/strings.xml
+++ b/core/resources/src/main/res/values-fil/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="size">Laki %1$s</string>
     <string name="loading">Ikinakarga…</string>
     <string name="pick_image">Pumili ng larawan para magsimula</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normal</string>
     <string name="slow">Mabagal</string>
     <string name="very_slow">Napakabagal</string>
+    <string name="compute_percents">Compute ng mga Porsyento</string>
+    <string name="minimum_value_is">Ang min value ay %1$s</string>
+    <string name="warp_sub">I-distort ang imahe sa pamamagitan ng pagguhit gamit ang mga daliri</string>
+    <string name="warp">Warp</string>
+    <string name="hardness">Katigasan</string>
+    <string name="warp_mode">Warp Mode</string>
+    <string name="warp_mode_move">Ilipat</string>
+    <string name="warp_mode_grow">Lumaki</string>
+    <string name="warp_mode_shrink">Paliitin</string>
+    <string name="warp_mode_swirl_cw">Umikot CW</string>
+    <string name="warp_mode_swirl_ccw">Iikot ang CCW</string>
+    <string name="fade_strength">Lakas ng Fade</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Bottom Drop</string>
+    <string name="start_drop">Simulan ang Drop</string>
+    <string name="end_drop">End Drop</string>
 </resources>
