--- a/core/resources/src/main/res/values-fr/strings.xml
+++ b/core/resources/src/main/res/values-fr/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="smth_went_wrong">Quelque chose s\'est mal passé: %1$s</string>
     <string name="size">Dimension %1$s</string>
     <string name="loading">Chargement…</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normale</string>
     <string name="slow">Lent</string>
     <string name="very_slow">Très lent</string>
+    <string name="compute_percents">Calculer les pourcentages</string>
+    <string name="minimum_value_is">La valeur minimale est %1$s</string>
+    <string name="warp_sub">Déformer l\'image en dessinant avec les doigts</string>
+    <string name="warp">Chaîne</string>
+    <string name="hardness">Dureté</string>
+    <string name="warp_mode">Mode déformation</string>
+    <string name="warp_mode_move">Se déplacer</string>
+    <string name="warp_mode_grow">Grandir</string>
+    <string name="warp_mode_shrink">Rétrécir</string>
+    <string name="warp_mode_swirl_cw">Tourbillon CW</string>
+    <string name="warp_mode_swirl_ccw">Tourbillon CCW</string>
+    <string name="fade_strength">Force de fondu</string>
+    <string name="top_drop">Top Drop</string>
+    <string name="bottom_drop">Chute inférieure</string>
+    <string name="start_drop">Démarrer le dépôt</string>
+    <string name="end_drop">Fin du dépôt</string>
 </resources>
