--- a/core/resources/src/main/res/values-it/strings.xml
+++ b/core/resources/src/main/res/values-it/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources>
+  -->
+
+<resources>
     <string name="smth_went_wrong">Qualcosa non ha funzionato: %1$s</string>
     <string name="size">Dimensione %1$s</string>
     <string name="loading">Caricamento…</string>
@@ -2020,4 +2022,20 @@
     <string name="normal">Normale</string>
     <string name="slow">Lento</string>
     <string name="very_slow">Molto lento</string>
+    <string name="compute_percents">Calcola percentuali</string>
+    <string name="minimum_value_is">Il valore minimo è %1$s</string>
+    <string name="warp_sub">Distorcere l\'immagine disegnando con le dita</string>
+    <string name="warp">Ordito</string>
+    <string name="hardness">Durezza</string>
+    <string name="warp_mode">Modalità di deformazione</string>
+    <string name="warp_mode_move">Mossa</string>
+    <string name="warp_mode_grow">Crescere</string>
+    <string name="warp_mode_shrink">Restringersi</string>
+    <string name="warp_mode_swirl_cw">Vortice in senso orario</string>
+    <string name="warp_mode_swirl_ccw">Girare in senso antiorario</string>
+    <string name="fade_strength">Forza della dissolvenza</string>
+    <string name="top_drop">Goccia in alto</string>
+    <string name="bottom_drop">Goccia dal basso</string>
+    <string name="start_drop">Inizia a rilasciare</string>
+    <string name="end_drop">Fine Goccia</string>
 </resources>
