--- a/core/resources/src/main/res/values-pl/strings.xml
+++ b/core/resources/src/main/res/values-pl/strings.xml
@@ -14,7 +14,9 @@
   ~
   ~ You should have received a copy of the Apache License
   ~ along with this program.  If not, see <http://www.apache.org/licenses/LICENSE-2.0>.
-  --><resources xmlns:tools="http://schemas.android.com/tools">
+  -->
+
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="size">Rozmiar %1$s</string>
     <string name="width">Szerokość %1$s</string>
     <string name="loading">Ładowanie…</string>
@@ -2022,4 +2024,20 @@
     <string name="normal">Normalna</string>
     <string name="slow">Powolny</string>
     <string name="very_slow">Bardzo powolny</string>
+    <string name="compute_percents">Oblicz procenty</string>
+    <string name="minimum_value_is">Minimalna wartość to %1$s</string>
+    <string name="warp_sub">Zniekształcanie obrazu poprzez rysowanie palcami</string>
+    <string name="warp">Osnowa</string>
+    <string name="hardness">Twardość</string>
+    <string name="warp_mode">Tryb wypaczenia</string>
+    <string name="warp_mode_move">Przenosić</string>
+    <string name="warp_mode_grow">Rosnąć</string>
+    <string name="warp_mode_shrink">Kurczyć się</string>
+    <string name="warp_mode_swirl_cw">Wir CW</string>
+    <string name="warp_mode_swirl_ccw">Wiruj CCW</string>
+    <string name="fade_strength">Siła blaknięcia</string>
+    <string name="top_drop">Najwyższy spadek</string>
+    <string name="bottom_drop">Dolny spadek</string>
+    <string name="start_drop">Rozpocznij upuszczanie</string>
+    <string name="end_drop">Koniec zrzutu</string>
 </resources>
